Программа для первого домашнего задания.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 ################################################################################
 
 /les1/.vs/les1/v16
+/les1/les1.vcxproj
+/les1/les1.vcxproj.filters
+/les1/les1.vcxproj.user
+/les1/Debug
