Результаты выполнения трех задач по второму домашнему заданию.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@
 /les1/les1.vcxproj.filters
 /les1/les1.vcxproj.user
 /les1/Debug
+/les2/.vs/les2/v16
+/les2/Debug
+/les2/les2.vcxproj
+/les2/les2.vcxproj.filters
+/les2/les2.vcxproj.user
