Фиксы по второй домашке. Три задания по третьей домашке.

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,9 @@
 /les2/les2.vcxproj
 /les2/les2.vcxproj.filters
 /les2/les2.vcxproj.user
+/les3/.vs/les3/v16
+/les3/Debug/les3.tlog
+/les3/Debug
+/les3/les3.vcxproj.user
+/les3/les3.vcxproj.filters
+/les3/les3.vcxproj
