Выполнение двух задач к четвертому домашнему заданию.

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@
 /les3/les3.vcxproj
 /les2/Release/les2.tlog
 /les2/Release
+/les4/.vs/les4/v16
+/les4/Debug
+/les4/les4.vcxproj.user
+/les4/les4.vcxproj.filters
+/les4/les4.vcxproj
