Две задачи к пятому домашнему заданию. Мелкие фиксы по третьей лабе.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@
 /les4/les4.vcxproj.user
 /les4/les4.vcxproj.filters
 /les4/les4.vcxproj
+/lab5/.vs/lab5/v16
+/lab5/Debug
+/lab5/lab5.vcxproj.user
+/lab5/lab5.vcxproj.filters
+/lab5/lab5.vcxproj
