Три задачи к третьему домашнему заданию.

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 /lab5/lab5.vcxproj.user
 /lab5/lab5.vcxproj.filters
 /lab5/lab5.vcxproj
+/les6/.vs/les6/v16
+/les6/Debug
+/les6/les6.vcxproj.user
+/les6/les6.vcxproj.filters
+/les6/les6.vcxproj
